removed build++ violations
SVN-Revision: 25996